app/components/PageContainer/PageContainer.module.css
/* <PageContainerHeading> component */
.pageHeadingContainer {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}
.headingIconContainer {
  height: 6rem;
  width: 6rem;
  background: var(--heading-icon-background);
  border: 0.2rem solid var(--heading-icon-border);
  border-radius: 50%;
  padding: 0.75rem;
  margin-right: 1rem;
}

/* <PageContainer> component */
.pageContainer {
  width: 100rem;
  max-width: calc(100% - 4rem);
  /* min-height: calc(100dvh - 8rem - 6rem - 2rem); */
  height: fit-content;
  background-color: var(--surface-page);
  color: var(--text-primary);
  border-radius: 0.6rem;
  box-shadow: 0 0.8rem 3.2rem rgba(0, 0, 0, 0.2);
  margin: 2rem;

  display: grid;
  grid-auto-flow: column;
  grid-auto-rows: 1fr;
  grid-template-columns: 1fr;
  grid-template-rows: min-content min-content 1fr min-content;
  /* grid-template-rows: repeat(4, min-content); */

  grid-template-areas:
    "PageContainer_Heading"
    "PageContainer_TopButtons"
    "PageContainer_Content"
    "PageContainer_BottomButtons";
}
.fixedPageContainer {
  composes: pageContainer;
  position: absolute;
  inset: 2rem;
  width: auto;
  max-width: unset;
  margin: 0;
  border-radius: 0.6rem;
  overflow: hidden;
}

.headingContainer {
  grid-area: PageContainer_Heading;
  padding: 0 2rem;
}
.topButtonPanel {
  grid-area: PageContainer_TopButtons;
  border-top: 0.1rem solid var(--border-color);
  padding: 1rem 2rem;

  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 1rem;
}

.contentContainer {
  grid-area: PageContainer_Content;
  min-height: 0;
  display: flex;
  flex-direction: column;
}

.bottomButtonPanel {
  grid-area: PageContainer_BottomButtons;
  display: flex;
  justify-content: flex-end;
  border-top: 0.1rem solid var(--border-color);
  padding: 2rem;
  gap: 1rem;
}

/* <PageSection> component */
.pageSection {
  border-top: 0.1rem solid var(--border-color);
  padding: 1rem 2rem;
}
.pageSection:last-of-type {
  padding-bottom: 2rem;
}
.pageSectionWithOverflow {
  composes: pageSection;
  flex: 1;
  min-height: 0;
  overflow-y: auto;
}
.pageSectionFill {
  composes: pageSection;
  flex: 1;
  min-height: 0;
}

/* <PageSectionColumns> component */
.columns {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: 1fr;
  gap: 2rem;
  height: 100%;
}

@media (max-width: 640px) {
  .columnsBreakpointSm {
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    height: auto;
  }
}
@media (max-width: 768px) {
  .columnsBreakpointMd {
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    height: auto;
  }
}
@media (max-width: 1024px) {
  .columnsBreakpointLg {
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    height: auto;
  }
}
@media (max-width: 1280px) {
  .columnsBreakpointXl {
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    height: auto;
  }
}
@media (max-width: 1536px) {
  .columnsBreakpoint2xl {
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    height: auto;
  }
}

/* <PageSectionColumn> component */
.column {
  min-width: 0;
}
.columnOverflow {
  composes: column;
  overflow-y: auto;
}

/* <PageSectionCell> component */
.pageSectionCell {
  border-left: 0.1rem solid var(--border-color);
}

/* <ButtonGroupContainer> component */
.buttonGroupContainer {
  display: flex;
  gap: 1rem;
}

